--- a/Readme
+++ b/Readme
@@ -22,3 +22,6 @@ chmod +x ssh_pruebas_conc4.sh
 ./ssh_pruebas_conc2.sh
 ./ssh_pruebas_conc3.sh
 ./ssh_pruebas_conc4.sh
+
+./servidor -p 8080
+python3 ./client.py -s localhost -p 8080
